cmake_minimum_required(VERSION 3.9)
project(NAWRIN_thesis_codes)

set(CMAKE_CXX_STANDARD 11)

add_executable(NAWRIN_thesis_codes
        "final input/scen-100-125-625-625-1.out"
        "final input/scen-100-125-625-625-10.out"
        "final input/scen-100-125-625-625-2.out"
        "final input/scen-100-125-625-625-3.out"
        "final input/scen-100-125-625-625-4.out"
        "final input/scen-100-125-625-625-5.out"
        "final input/scen-100-125-625-625-6.out"
        "final input/scen-100-125-625-625-7.out"
        "final input/scen-100-125-625-625-8.out"
        "final input/scen-100-125-625-625-9.out"
        "final input/scen-100-150-625-625-1.out"
        "final input/scen-100-150-625-625-10.out"
        "final input/scen-100-150-625-625-2.out"
        "final input/scen-100-150-625-625-3.out"
        "final input/scen-100-150-625-625-4.out"
        "final input/scen-100-150-625-625-5.out"
        "final input/scen-100-150-625-625-6.out"
        "final input/scen-100-150-625-625-7.out"
        "final input/scen-100-150-625-625-8.out"
        "final input/scen-100-150-625-625-9.out"
        "final input/scen-100-175-625-625-1.out"
        "final input/scen-100-175-625-625-10.out"
        "final input/scen-100-175-625-625-2.out"
        "final input/scen-100-175-625-625-3.out"
        "final input/scen-100-175-625-625-4.out"
        "final input/scen-100-175-625-625-5.out"
        "final input/scen-100-175-625-625-6.out"
        "final input/scen-100-175-625-625-7.out"
        "final input/scen-100-175-625-625-8.out"
        "final input/scen-100-175-625-625-9.out"
        "final input/scen-100-200-625-625-1.out"
        "final input/scen-100-200-625-625-10.out"
        "final input/scen-100-200-625-625-2.out"
        "final input/scen-100-200-625-625-3.out"
        "final input/scen-100-200-625-625-4.out"
        "final input/scen-100-200-625-625-5.out"
        "final input/scen-100-200-625-625-6.out"
        "final input/scen-100-200-625-625-7.out"
        "final input/scen-100-200-625-625-8.out"
        "final input/scen-100-200-625-625-9.out"
        "final input/scen-100-225-625-625-1.out"
        "final input/scen-100-225-625-625-10.out"
        "final input/scen-100-225-625-625-2.out"
        "final input/scen-100-225-625-625-3.out"
        "final input/scen-100-225-625-625-4.out"
        "final input/scen-100-225-625-625-5.out"
        "final input/scen-100-225-625-625-6.out"
        "final input/scen-100-225-625-625-7.out"
        "final input/scen-100-225-625-625-8.out"
        "final input/scen-100-225-625-625-9.out"
        "final input/scen-150-125-625-625-1.out"
        "final input/scen-150-125-625-625-10.out"
        "final input/scen-150-125-625-625-2.out"
        "final input/scen-150-125-625-625-3.out"
        "final input/scen-150-125-625-625-4.out"
        "final input/scen-150-125-625-625-5.out"
        "final input/scen-150-125-625-625-6.out"
        "final input/scen-150-125-625-625-7.out"
        "final input/scen-150-125-625-625-8.out"
        "final input/scen-150-125-625-625-9.out"
        "final input/scen-150-150-625-625-1.out"
        "final input/scen-150-150-625-625-10.out"
        "final input/scen-150-150-625-625-2.out"
        "final input/scen-150-150-625-625-3.out"
        "final input/scen-150-150-625-625-4.out"
        "final input/scen-150-150-625-625-5.out"
        "final input/scen-150-150-625-625-6.out"
        "final input/scen-150-150-625-625-7.out"
        "final input/scen-150-150-625-625-8.out"
        "final input/scen-150-150-625-625-9.out"
        "final input/scen-150-175-625-625-1.out"
        "final input/scen-150-175-625-625-10.out"
        "final input/scen-150-175-625-625-2.out"
        "final input/scen-150-175-625-625-3.out"
        "final input/scen-150-175-625-625-4.out"
        "final input/scen-150-175-625-625-5.out"
        "final input/scen-150-175-625-625-6.out"
        "final input/scen-150-175-625-625-7.out"
        "final input/scen-150-175-625-625-8.out"
        "final input/scen-150-175-625-625-9.out"
        "final input/scen-150-200-625-625-1.out"
        "final input/scen-150-200-625-625-10.out"
        "final input/scen-150-200-625-625-2.out"
        "final input/scen-150-200-625-625-3.out"
        "final input/scen-150-200-625-625-4.out"
        "final input/scen-150-200-625-625-5.out"
        "final input/scen-150-200-625-625-6.out"
        "final input/scen-150-200-625-625-7.out"
        "final input/scen-150-200-625-625-8.out"
        "final input/scen-150-200-625-625-9.out"
        "final input/scen-150-225-625-625-1.out"
        "final input/scen-150-225-625-625-10.out"
        "final input/scen-150-225-625-625-2.out"
        "final input/scen-150-225-625-625-3.out"
        "final input/scen-150-225-625-625-4.out"
        "final input/scen-150-225-625-625-5.out"
        "final input/scen-150-225-625-625-6.out"
        "final input/scen-150-225-625-625-7.out"
        "final input/scen-150-225-625-625-8.out"
        "final input/scen-150-225-625-625-9.out"
        "final input/scen-200-125-625-625-1.out"
        "final input/scen-200-125-625-625-10.out"
        "final input/scen-200-125-625-625-2.out"
        "final input/scen-200-125-625-625-3.out"
        "final input/scen-200-125-625-625-4.out"
        "final input/scen-200-125-625-625-5.out"
        "final input/scen-200-125-625-625-6.out"
        "final input/scen-200-125-625-625-7.out"
        "final input/scen-200-125-625-625-8.out"
        "final input/scen-200-125-625-625-9.out"
        "final input/scen-200-150-625-625-1.out"
        "final input/scen-200-150-625-625-10.out"
        "final input/scen-200-150-625-625-2.out"
        "final input/scen-200-150-625-625-3.out"
        "final input/scen-200-150-625-625-4.out"
        "final input/scen-200-150-625-625-5.out"
        "final input/scen-200-150-625-625-6.out"
        "final input/scen-200-150-625-625-7.out"
        "final input/scen-200-150-625-625-8.out"
        "final input/scen-200-150-625-625-9.out"
        "final input/scen-200-175-625-625-1.out"
        "final input/scen-200-175-625-625-10.out"
        "final input/scen-200-175-625-625-2.out"
        "final input/scen-200-175-625-625-3.out"
        "final input/scen-200-175-625-625-4.out"
        "final input/scen-200-175-625-625-5.out"
        "final input/scen-200-175-625-625-6.out"
        "final input/scen-200-175-625-625-7.out"
        "final input/scen-200-175-625-625-8.out"
        "final input/scen-200-175-625-625-9.out"
        "final input/scen-200-200-625-625-1.out"
        "final input/scen-200-200-625-625-10.out"
        "final input/scen-200-200-625-625-2.out"
        "final input/scen-200-200-625-625-3.out"
        "final input/scen-200-200-625-625-4.out"
        "final input/scen-200-200-625-625-5.out"
        "final input/scen-200-200-625-625-6.out"
        "final input/scen-200-200-625-625-7.out"
        "final input/scen-200-200-625-625-8.out"
        "final input/scen-200-200-625-625-9.out"
        "final input/scen-200-225-625-625-1.out"
        "final input/scen-200-225-625-625-10.out"
        "final input/scen-200-225-625-625-2.out"
        "final input/scen-200-225-625-625-3.out"
        "final input/scen-200-225-625-625-4.out"
        "final input/scen-200-225-625-625-5.out"
        "final input/scen-200-225-625-625-6.out"
        "final input/scen-200-225-625-625-7.out"
        "final input/scen-200-225-625-625-8.out"
        "final input/scen-200-225-625-625-9.out"
        "final input/scen-250-125-625-625-1.out"
        "final input/scen-250-125-625-625-10.out"
        "final input/scen-250-125-625-625-2.out"
        "final input/scen-250-125-625-625-3.out"
        "final input/scen-250-125-625-625-4.out"
        "final input/scen-250-125-625-625-5.out"
        "final input/scen-250-125-625-625-6.out"
        "final input/scen-250-125-625-625-7.out"
        "final input/scen-250-125-625-625-8.out"
        "final input/scen-250-125-625-625-9.out"
        "final input/scen-250-150-625-625-1.out"
        "final input/scen-250-150-625-625-10.out"
        "final input/scen-250-150-625-625-2.out"
        "final input/scen-250-150-625-625-3.out"
        "final input/scen-250-150-625-625-4.out"
        "final input/scen-250-150-625-625-5.out"
        "final input/scen-250-150-625-625-6.out"
        "final input/scen-250-150-625-625-7.out"
        "final input/scen-250-150-625-625-8.out"
        "final input/scen-250-150-625-625-9.out"
        "final input/scen-250-175-625-625-1.out"
        "final input/scen-250-175-625-625-10.out"
        "final input/scen-250-175-625-625-2.out"
        "final input/scen-250-175-625-625-3.out"
        "final input/scen-250-175-625-625-4.out"
        "final input/scen-250-175-625-625-5.out"
        "final input/scen-250-175-625-625-6.out"
        "final input/scen-250-175-625-625-7.out"
        "final input/scen-250-175-625-625-8.out"
        "final input/scen-250-175-625-625-9.out"
        "final input/scen-250-200-625-625-1.out"
        "final input/scen-250-200-625-625-10.out"
        "final input/scen-250-200-625-625-2.out"
        "final input/scen-250-200-625-625-3.out"
        "final input/scen-250-200-625-625-4.out"
        "final input/scen-250-200-625-625-5.out"
        "final input/scen-250-200-625-625-6.out"
        "final input/scen-250-200-625-625-7.out"
        "final input/scen-250-200-625-625-8.out"
        "final input/scen-250-200-625-625-9.out"
        "final input/scen-250-225-625-625-1.out"
        "final input/scen-250-225-625-625-10.out"
        "final input/scen-250-225-625-625-2.out"
        "final input/scen-250-225-625-625-3.out"
        "final input/scen-250-225-625-625-4.out"
        "final input/scen-250-225-625-625-5.out"
        "final input/scen-250-225-625-625-6.out"
        "final input/scen-250-225-625-625-7.out"
        "final input/scen-250-225-625-625-8.out"
        "final input/scen-250-225-625-625-9.out"
        "final input/scen-300-125-625-625-1.out"
        "final input/scen-300-125-625-625-10.out"
        "final input/scen-300-125-625-625-2.out"
        "final input/scen-300-125-625-625-3.out"
        "final input/scen-300-125-625-625-4.out"
        "final input/scen-300-125-625-625-5.out"
        "final input/scen-300-125-625-625-6.out"
        "final input/scen-300-125-625-625-7.out"
        "final input/scen-300-125-625-625-8.out"
        "final input/scen-300-125-625-625-9.out"
        "final input/scen-300-150-625-625-1.out"
        "final input/scen-300-150-625-625-10.out"
        "final input/scen-300-150-625-625-2.out"
        "final input/scen-300-150-625-625-3.out"
        "final input/scen-300-150-625-625-4.out"
        "final input/scen-300-150-625-625-5.out"
        "final input/scen-300-150-625-625-6.out"
        "final input/scen-300-150-625-625-7.out"
        "final input/scen-300-150-625-625-8.out"
        "final input/scen-300-150-625-625-9.out"
        "final input/scen-300-175-625-625-1.out"
        "final input/scen-300-175-625-625-10.out"
        "final input/scen-300-175-625-625-2.out"
        "final input/scen-300-175-625-625-3.out"
        "final input/scen-300-175-625-625-4.out"
        "final input/scen-300-175-625-625-5.out"
        "final input/scen-300-175-625-625-6.out"
        "final input/scen-300-175-625-625-7.out"
        "final input/scen-300-175-625-625-8.out"
        "final input/scen-300-175-625-625-9.out"
        "final input/scen-300-200-625-625-1.out"
        "final input/scen-300-200-625-625-10.out"
        "final input/scen-300-200-625-625-2.out"
        "final input/scen-300-200-625-625-3.out"
        "final input/scen-300-200-625-625-4.out"
        "final input/scen-300-200-625-625-5.out"
        "final input/scen-300-200-625-625-6.out"
        "final input/scen-300-200-625-625-7.out"
        "final input/scen-300-200-625-625-8.out"
        "final input/scen-300-200-625-625-9.out"
        "final input/scen-300-225-625-625-1.out"
        "final input/scen-300-225-625-625-10.out"
        "final input/scen-300-225-625-625-2.out"
        "final input/scen-300-225-625-625-3.out"
        "final input/scen-300-225-625-625-4.out"
        "final input/scen-300-225-625-625-5.out"
        "final input/scen-300-225-625-625-6.out"
        "final input/scen-300-225-625-625-7.out"
        "final input/scen-300-225-625-625-8.out"
        "final input/scen-300-225-625-625-9.out"
        "final input/scen-350-125-625-625-1.out"
        "final input/scen-350-125-625-625-10.out"
        "final input/scen-350-125-625-625-2.out"
        "final input/scen-350-125-625-625-3.out"
        "final input/scen-350-125-625-625-4.out"
        "final input/scen-350-125-625-625-5.out"
        "final input/scen-350-125-625-625-6.out"
        "final input/scen-350-125-625-625-7.out"
        "final input/scen-350-125-625-625-8.out"
        "final input/scen-350-125-625-625-9.out"
        "final input/scen-350-150-625-625-1.out"
        "final input/scen-350-150-625-625-10.out"
        "final input/scen-350-150-625-625-2.out"
        "final input/scen-350-150-625-625-3.out"
        "final input/scen-350-150-625-625-4.out"
        "final input/scen-350-150-625-625-5.out"
        "final input/scen-350-150-625-625-6.out"
        "final input/scen-350-150-625-625-7.out"
        "final input/scen-350-150-625-625-8.out"
        "final input/scen-350-150-625-625-9.out"
        "final input/scen-350-175-625-625-1.out"
        "final input/scen-350-175-625-625-10.out"
        "final input/scen-350-175-625-625-2.out"
        "final input/scen-350-175-625-625-3.out"
        "final input/scen-350-175-625-625-4.out"
        "final input/scen-350-175-625-625-5.out"
        "final input/scen-350-175-625-625-6.out"
        "final input/scen-350-175-625-625-7.out"
        "final input/scen-350-175-625-625-8.out"
        "final input/scen-350-175-625-625-9.out"
        "final input/scen-350-200-625-625-1.out"
        "final input/scen-350-200-625-625-10.out"
        "final input/scen-350-200-625-625-2.out"
        "final input/scen-350-200-625-625-3.out"
        "final input/scen-350-200-625-625-4.out"
        "final input/scen-350-200-625-625-5.out"
        "final input/scen-350-200-625-625-6.out"
        "final input/scen-350-200-625-625-7.out"
        "final input/scen-350-200-625-625-8.out"
        "final input/scen-350-200-625-625-9.out"
        "final input/scen-350-225-625-625-1.out"
        "final input/scen-350-225-625-625-10.out"
        "final input/scen-350-225-625-625-2.out"
        "final input/scen-350-225-625-625-3.out"
        "final input/scen-350-225-625-625-4.out"
        "final input/scen-350-225-625-625-5.out"
        "final input/scen-350-225-625-625-6.out"
        "final input/scen-350-225-625-625-7.out"
        "final input/scen-350-225-625-625-8.out"
        "final input/scen-350-225-625-625-9.out"
        "final input/scen-400-125-625-625-1.out"
        "final input/scen-400-125-625-625-10.out"
        "final input/scen-400-125-625-625-2.out"
        "final input/scen-400-125-625-625-3.out"
        "final input/scen-400-125-625-625-4.out"
        "final input/scen-400-125-625-625-5.out"
        "final input/scen-400-125-625-625-6.out"
        "final input/scen-400-125-625-625-7.out"
        "final input/scen-400-125-625-625-8.out"
        "final input/scen-400-125-625-625-9.out"
        "final input/scen-400-150-625-625-1.out"
        "final input/scen-400-150-625-625-10.out"
        "final input/scen-400-150-625-625-2.out"
        "final input/scen-400-150-625-625-3.out"
        "final input/scen-400-150-625-625-4.out"
        "final input/scen-400-150-625-625-5.out"
        "final input/scen-400-150-625-625-6.out"
        "final input/scen-400-150-625-625-7.out"
        "final input/scen-400-150-625-625-8.out"
        "final input/scen-400-150-625-625-9.out"
        "final input/scen-400-175-625-625-1.out"
        "final input/scen-400-175-625-625-10.out"
        "final input/scen-400-175-625-625-2.out"
        "final input/scen-400-175-625-625-3.out"
        "final input/scen-400-175-625-625-4.out"
        "final input/scen-400-175-625-625-5.out"
        "final input/scen-400-175-625-625-6.out"
        "final input/scen-400-175-625-625-7.out"
        "final input/scen-400-175-625-625-8.out"
        "final input/scen-400-175-625-625-9.out"
        "final input/scen-400-200-625-625-1.out"
        "final input/scen-400-200-625-625-10.out"
        "final input/scen-400-200-625-625-2.out"
        "final input/scen-400-200-625-625-3.out"
        "final input/scen-400-200-625-625-4.out"
        "final input/scen-400-200-625-625-5.out"
        "final input/scen-400-200-625-625-6.out"
        "final input/scen-400-200-625-625-7.out"
        "final input/scen-400-200-625-625-8.out"
        "final input/scen-400-200-625-625-9.out"
        "final input/scen-400-225-625-625-1.out"
        "final input/scen-400-225-625-625-10.out"
        "final input/scen-400-225-625-625-2.out"
        "final input/scen-400-225-625-625-3.out"
        "final input/scen-400-225-625-625-4.out"
        "final input/scen-400-225-625-625-5.out"
        "final input/scen-400-225-625-625-6.out"
        "final input/scen-400-225-625-625-7.out"
        "final input/scen-400-225-625-625-8.out"
        "final input/scen-400-225-625-625-9.out"
        "final input/scen-450-125-625-625-1.out"
        "final input/scen-450-125-625-625-10.out"
        "final input/scen-450-125-625-625-2.out"
        "final input/scen-450-125-625-625-3.out"
        "final input/scen-450-125-625-625-4.out"
        "final input/scen-450-125-625-625-5.out"
        "final input/scen-450-125-625-625-6.out"
        "final input/scen-450-125-625-625-7.out"
        "final input/scen-450-125-625-625-8.out"
        "final input/scen-450-125-625-625-9.out"
        "final input/scen-450-150-625-625-1.out"
        "final input/scen-450-150-625-625-10.out"
        "final input/scen-450-150-625-625-2.out"
        "final input/scen-450-150-625-625-3.out"
        "final input/scen-450-150-625-625-4.out"
        "final input/scen-450-150-625-625-5.out"
        "final input/scen-450-150-625-625-6.out"
        "final input/scen-450-150-625-625-7.out"
        "final input/scen-450-150-625-625-8.out"
        "final input/scen-450-150-625-625-9.out"
        "final input/scen-450-175-625-625-1.out"
        "final input/scen-450-175-625-625-10.out"
        "final input/scen-450-175-625-625-2.out"
        "final input/scen-450-175-625-625-3.out"
        "final input/scen-450-175-625-625-4.out"
        "final input/scen-450-175-625-625-5.out"
        "final input/scen-450-175-625-625-6.out"
        "final input/scen-450-175-625-625-7.out"
        "final input/scen-450-175-625-625-8.out"
        "final input/scen-450-175-625-625-9.out"
        "final input/scen-450-200-625-625-1.out"
        "final input/scen-450-200-625-625-10.out"
        "final input/scen-450-200-625-625-2.out"
        "final input/scen-450-200-625-625-3.out"
        "final input/scen-450-200-625-625-4.out"
        "final input/scen-450-200-625-625-5.out"
        "final input/scen-450-200-625-625-6.out"
        "final input/scen-450-200-625-625-7.out"
        "final input/scen-450-200-625-625-8.out"
        "final input/scen-450-200-625-625-9.out"
        "final input/scen-450-225-625-625-1.out"
        "final input/scen-450-225-625-625-10.out"
        "final input/scen-450-225-625-625-2.out"
        "final input/scen-450-225-625-625-3.out"
        "final input/scen-450-225-625-625-4.out"
        "final input/scen-450-225-625-625-5.out"
        "final input/scen-450-225-625-625-6.out"
        "final input/scen-450-225-625-625-7.out"
        "final input/scen-450-225-625-625-8.out"
        "final input/scen-450-225-625-625-9.out"
        "final input/scen-500-125-625-625-1.out"
        "final input/scen-500-125-625-625-10.out"
        "final input/scen-500-125-625-625-2.out"
        "final input/scen-500-125-625-625-3.out"
        "final input/scen-500-125-625-625-4.out"
        "final input/scen-500-125-625-625-5.out"
        "final input/scen-500-125-625-625-6.out"
        "final input/scen-500-125-625-625-7.out"
        "final input/scen-500-125-625-625-8.out"
        "final input/scen-500-125-625-625-9.out"
        "final input/scen-500-150-625-625-1.out"
        "final input/scen-500-150-625-625-10.out"
        "final input/scen-500-150-625-625-2.out"
        "final input/scen-500-150-625-625-3.out"
        "final input/scen-500-150-625-625-4.out"
        "final input/scen-500-150-625-625-5.out"
        "final input/scen-500-150-625-625-6.out"
        "final input/scen-500-150-625-625-7.out"
        "final input/scen-500-150-625-625-8.out"
        "final input/scen-500-150-625-625-9.out"
        "final input/scen-500-175-625-625-1.out"
        "final input/scen-500-175-625-625-10.out"
        "final input/scen-500-175-625-625-2.out"
        "final input/scen-500-175-625-625-3.out"
        "final input/scen-500-175-625-625-4.out"
        "final input/scen-500-175-625-625-5.out"
        "final input/scen-500-175-625-625-6.out"
        "final input/scen-500-175-625-625-7.out"
        "final input/scen-500-175-625-625-8.out"
        "final input/scen-500-175-625-625-9.out"
        "final input/scen-500-200-625-625-1.out"
        "final input/scen-500-200-625-625-10.out"
        "final input/scen-500-200-625-625-2.out"
        "final input/scen-500-200-625-625-3.out"
        "final input/scen-500-200-625-625-4.out"
        "final input/scen-500-200-625-625-5.out"
        "final input/scen-500-200-625-625-6.out"
        "final input/scen-500-200-625-625-7.out"
        "final input/scen-500-200-625-625-8.out"
        "final input/scen-500-200-625-625-9.out"
        "final input/scen-500-225-625-625-1.out"
        "final input/scen-500-225-625-625-10.out"
        "final input/scen-500-225-625-625-2.out"
        "final input/scen-500-225-625-625-3.out"
        "final input/scen-500-225-625-625-4.out"
        "final input/scen-500-225-625-625-5.out"
        "final input/scen-500-225-625-625-6.out"
        "final input/scen-500-225-625-625-7.out"
        "final input/scen-500-225-625-625-8.out"
        "final input/scen-500-225-625-625-9.out"
        outDP/scen-100-125-625-625-1.out
        b.txt
        DP.cpp
        files1.txt
        out.txt)
